[package]
name = "mysql_binlog"
version = "0.4.0"
authors = ["James Brown <jbrown@easypost.com>"]
description = "Parser for the MySQL binlog format"
documentation = "https://docs.rs/mysql_binlog"
homepage = "https://github.com/EasyPost/rust-mysql-binlog"
repository = "https://github.com/EasyPost/rust-mysql-binlog"
license = "ISC"
readme = "README.md"
edition = "2018"

[dependencies]

[dev-dependencies]
assert_matches = "1"
